Switch to using access token for notifications

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,8 +66,7 @@ jobs:
         with:
           server: ${{ secrets.MATRIX_SERVER }}
           room-id: ${{ secrets.MATRIX_COYIM_ROOM_ID }}
-          username: ${{ secrets.MATRIX_USER }}
-          password: ${{ secrets.MATRIX_PASSWORD }}
+          access_token: ${{ secrets.MATRIX_ACCESS_TOKEN }}
           status: ${{ env.WORKFLOW_CONCLUSION }}
 
 # we need a release job for linux, with RELEASE=true
