--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -10,7 +10,5 @@ jobs:
           room_id: ${{ secrets.MATRIX_COYIM_ROOM_ID }}
           access_token: ${{ secrets.MATRIX_ACCESS_TOKEN }}
           server: ${{ secrets.MATRIX_SERVER }}
-          message: <h1><span data-mx-color="#00FF2D">SUCCESS</span></h1> Build <a href="$GITHUB_SERVER_URL/${{github.repository}}/actions/runs/${{github.run_number}}">
-            # ${{GITHUB_REPOSITORY}} #${{GITHUB_RUN_NUMBER}} ${{GITHUB_WORKFLOW}}</a> was successful!<br>
-            # triggered by <a href="${{GITHUB_SERVER_URL}}/${{GITHUB_ACTOR}}">${{GITHUB_ACTOR}}</a>
+          message: <h1><span data-mx-color="#00FF2D">SUCCESS</span></h1> Build <a href="$GITHUB_SERVER_URL/${{github.repository}}/actions/runs/${{github.run_number}}">${{github.repository}} \#${{github.run_number}} ${{github.workflow}}</a> was successful!<br> triggered by <a href="$GITHUB_SERVER_URL/${{github.actor}}">${{github.actor}}</a>
           
