--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -9,7 +9,7 @@ jobs:
     if: always() # set always
     steps:
       - name: send message on success
-        uses: olabiniV2/matrix-msg@v0.0.1
+        uses: olabiniV2/matrix-msg-action@v0.0.1
         with:
           room_id: ${{ secrets.MATRIX_COYIM_ROOM_ID }}
           access_token: ${{ secrets.MATRIX_ACCESS_TOKEN }}
