--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,27 +64,30 @@ jobs:
       - uses: technote-space/workflow-conclusion-action@v1
       - name: send message on success
         if: ${{ env.WORKFLOW_CONCLUSION == 'success' }}
-        uses: s3krit/matrix-message-action@v0.0.3
+        uses: olabiniV2/matrix-message@v0.0.1
         with:
           room_id: ${{ secrets.MATRIX_COYIM_ROOM_ID }}
           access_token: ${{ secrets.MATRIX_ACCESS_TOKEN }}
           server: ${{ secrets.MATRIX_SERVER }}
+          subject: SUCCESS Build \#${{github.run_number}} received status success!
           message: <h1><span data-mx-color="#00FF2D">SUCCESS</span></h1> Build <a href="https://github.com/${{github.repository}}/actions/runs/${{github.run_number}}">${{github.repository}} \#${{github.run_number}} ${{github.workflow}}</a> was successful!<br> triggered by <a href="https://github.com/${{github.actor}}">${{github.actor}}</a> - ${{github.event.head_commit.message}}
       - name: send message on failure
         if: ${{ env.WORKFLOW_CONCLUSION == 'failure' }}
-        uses: s3krit/matrix-message-action@v0.0.3
+        uses: olabiniV2/matrix-message@v0.0.1
         with:
           room_id: ${{ secrets.MATRIX_COYIM_ROOM_ID }}
           access_token: ${{ secrets.MATRIX_ACCESS_TOKEN }}
           server: ${{ secrets.MATRIX_SERVER }}
+          subject: FAILURE Build \#${{github.run_number}} received status failure!
           message: <h1><span data-mx-color="#FF0A00">FAILURE</span></h1> Build <a href="https://github.com/${{github.repository}}/actions/runs/${{github.run_number}}">${{github.repository}} \#${{github.run_number}} ${{github.workflow}}</a> failed!<br> triggered by <a href="https://github.com/${{github.actor}}">${{github.actor}}</a> - ${{github.event.head_commit.message}}
       - name: send message on cancelled
         if: ${{ env.WORKFLOW_CONCLUSION == 'cancelled' }}
-        uses: s3krit/matrix-message-action@v0.0.3
+        uses: olabiniV2/matrix-message@v0.0.1
         with:
           room_id: ${{ secrets.MATRIX_COYIM_ROOM_ID }}
           access_token: ${{ secrets.MATRIX_ACCESS_TOKEN }}
           server: ${{ secrets.MATRIX_SERVER }}
+          subject: CANCELLED Build \#${{github.run_number}} received status cancelled!
           message: <h1><span data-mx-color="#FFF608">CANCELLED</span></h1> Build <a href="https://github.com/${{github.repository}}/actions/runs/${{github.run_number}}">${{github.repository}} \#${{github.run_number}} ${{github.workflow}}</a> was cancelled!<br> triggered by <a href="https://github.com/${{github.actor}}">${{github.actor}}</a> - ${{github.event.head_commit.message}}
 
 
