--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,11 +56,11 @@ jobs:
           DISPLAY: ':99.0'
           COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
 
-  notify:
-    name: Notify on success or failure
+  notify-test:
+    name: Notify on success or failure of test
     needs: test
     runs-on: ubuntu-20.04
-    if: always() # set always
+    if: always() 
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -80,4 +80,25 @@ jobs:
           subject: ${{ steps.message-generator.outputs.subject }}
           message: ${{ steps.message-generator.outputs.message }}
 
-# we need a release job for linux, with RELEASE=true
+  build-release-linux:
+    name: Build Linux release
+    needs: test
+    runs-on: ubuntu-20.04
+    if: startsWith( github.ref, 'refs/tags/')
+
+    env:
+      GOPATH: ${{ github.workspace }}
+      GO111MODULE: off
+    defaults:
+      run:
+        working-directory: ${{ env.GOPATH }}/src/github.com/${{ github.repository }}
+    
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.14'
+      - name: build release
+        run: make -C ci/ release-gui-linux
+      
