--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,3 +105,30 @@ jobs:
       - name: build release
         run: make -C ci/ release-gui-linux
       
+  build-release-osx:
+    name: Build OS X release
+    needs: test
+    runs-on: macos-latest
+    if: startsWith( github.ref, 'refs/tags/')
+
+    env:
+      GOPATH: ${{ github.workspace }}
+      GO111MODULE: off
+    defaults:
+      run:
+        working-directory: ${{ env.GOPATH }}/src/github.com/${{ github.repository }}
+    
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          path: ${{ env.GOPATH }}/src/github.com/${{ github.repository }}        
+      - name: install OS dependencies
+        run: brew install gtk+3 adwaita-icon-theme hicolor-icon-theme shared-mime-info gtk-mac-integration create-dmg fileicon
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.14'
+      - name: install project dependencies
+        run: make -C ci/ deps
+      - name: build release
+        run: make -C ci/ release-dmg clean-mac-bundle release-gui
